// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"development" environment "baseAssetsOutputPath" option 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[hash:20].[ext]",
      },
    ],
    Array [
      "@dr.pogodin/css-modules-transform",
      Object {
        "extensions": Array [
          ".css",
          ".scss",
        ],
        "generateScopedName": [Function],
        "processorOpts": Object {
          "parser": Object {
            "parse": [Function],
            "stringify": [Function],
          },
        },
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[hash:20].[ext]",
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[hash:20].[ext]",
      },
    ],
    Array [
      "@dr.pogodin/css-modules-transform",
      Object {
        "extensions": Array [
          ".css",
          ".scss",
        ],
        "generateScopedName": [Function],
        "processorOpts": Object {
          "parser": Object {
            "parse": [Function],
            "stringify": [Function],
          },
        },
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "baseAssetsOutputPath" option 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[hash:20].[ext]",
      },
    ],
    Array [
      "@dr.pogodin/css-modules-transform",
      Object {
        "extensions": Array [
          ".css",
          ".scss",
        ],
        "generateScopedName": [Function],
        "processorOpts": Object {
          "parser": Object {
            "parse": [Function],
            "stringify": [Function],
          },
        },
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[hash:20].[ext]",
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": Array [
          "resolveWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@dr.pogodin/transform-assets",
      Object {
        "extensions": Array [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[hash:20].[ext]",
      },
    ],
    Array [
      "@dr.pogodin/css-modules-transform",
      Object {
        "extensions": Array [
          ".css",
          ".scss",
        ],
        "generateScopedName": [Function],
        "processorOpts": Object {
          "parser": Object {
            "parse": [Function],
            "stringify": [Function],
          },
        },
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "current node",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
